<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questions.AddAQuestion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_question_title"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/question_txt"
                style="@style/roundedInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/add_question_hint"
                android:inputType="textMultiLine"
                android:lines="7"
                android:maxLines="10"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColorHint="@color/mud_faded" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:weightSum="2">

                <Button
                    android:id="@+id/post_audio_play"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:text="@string/play"
                    />

                <Button
                    android:id="@+id/post_audio_pause"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:text="@string/pause"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/post_audio_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_submit_question"
                style="@style/roundedButton.mud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:onClick="submitClicked"
                android:text="@string/submit_question_btn" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>