<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5EBCA"
    tools:context=".Activities.SignUpActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/desertScene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@null"
        android:src="@drawable/desert_scene"
        android:layout_alignParentBottom="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="24dp"
                >

                <EditText
                    android:id="@+id/edittext_username"
                    style="@style/roundedInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:textColorHint="@color/mud_faded"
                    android:maxLength="30"
                    android:inputType="textPersonName"
                    android:layout_marginBottom="20dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/edittext_tribe"
                    style="@style/roundedInputField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tribe"
                    android:textColorHint="@color/mud_faded"
                    android:inputType="textPersonName"
                    android:maxLength="30"
                    android:layout_marginBottom="20dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <View
                        android:id="@+id/centerShim"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:visibility="invisible"
                        android:layout_centerHorizontal="true"/>

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/centerShim"
                        app:ccp_defaultNameCode="eg"
                        app:ccp_showFullName="true"
                        app:ccp_showNameCode="false"
                        app:ccp_showPhoneCode="false"
                        app:ccp_autoFormatNumber="true"
                        />

                    <EditText
                        android:id="@+id/edittext_mobile_number"
                        style="@style/roundedInputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@+id/centerShim"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/mobile_number"
                        android:textColorHint="@color/mud_faded"
                        android:inputType="phone"
                        android:maxLength="30"
                        android:layout_marginBottom="20dp"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"/>

                </RelativeLayout>

                <Button
                    android:id="@+id/button_register"
                    style="@style/roundedButton.mud"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/roundedButtonHeight"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/white"
                    android:text="@string/register"
                    />


            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/activityIndicatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#77777777"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/activityIndicator"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>