<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <!--image-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_image"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    card_view:cardCornerRadius="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    >

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:scaleType="centerCrop"
                        android:background="@drawable/round_corners"
                        android:src="@drawable/default_pp">

                    </ImageView>

                </androidx.cardview.widget.CardView>


                <ImageButton
                    android:id="@+id/change_profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/cardView_image"
                    android:layout_marginLeft="-45dp"
                    android:layout_marginTop="-45dp"
                    android:layout_toRightOf="@id/cardView_image"
                    android:background="@drawable/camera_icon_background"
                    android:clickable="true"
                    android:translationZ="2dp"
                    android:src="@drawable/ic_insert_photo_black_24dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/edittext_change_username"
                style="@style/roundedInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@null"
                android:maxLength="30"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tribe"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/edittext_change_tribe"
                style="@style/roundedInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@null"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:selectAllOnFocus="true"
                android:singleLine="true"/>

            <Button
                android:id="@+id/button_confirm_changing_data"
                style="@style/roundedButton.lightTurmeric"
                android:layout_width="match_parent"
                android:layout_height="@dimen/roundedButtonHeight"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                android:text="@string/confirm_changing_data"
                />

        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:id="@+id/activityIndicatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77777777"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/activityIndicator"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" />
    </RelativeLayout>

</RelativeLayout>